deploy/kube/api.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    name: api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 10080
    targetPort: 10080
  sessionAffinity: ClientIP
  selector:
    name: api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: api
        service: api
      annotations:
        prometheus.io/port: "10080"
        prometheus.io/scheme: "http"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: api
        image: quay.io/appvia/kore-apiserver:latest
        ports:
          - name: http
            containerPort: 10080
        volumeMounts:
          - name: certs
            readOnly: true
            mountPath: /ca
      volumes:
      - name: certs
        secret:
          secretName: certs
