deploy/kube/controlplane.yml
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
  labels:
    name: etcd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 2379
    targetPort: 2379
  sessionAffinity: ClientIP
  selector:
    name: etcd
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: etcd
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: etcd
        service: etcd
      annotations:
        prometheus.io/port: "2379"
        prometheus.io/scheme: "http"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: etcd
          image: bitnami/etcd:latest
          ports:
            - name: http
              containerPort: 2379
          volumeMounts:
            - name: etcd
              mountPath: /data
      volumes:
        - name: etcd
          persistentVolumeClaim:
            claimName: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver
  labels:
    name: apiserver
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  sessionAffinity: ClientIP
  selector:
    name: apiserver
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apiserver
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: apiserver
        service: apiserver
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: apiserver
        image: mirrorgooglecontainers/kube-apiserver-amd64:v1.14.8
        command:
          - /usr/local/bin/kube-apiserver
          - --address=0.0.0.0
          - --alsologtostderr
          - --authorization-mode=RBAC
          - --bind-address=0.0.0.0
          - --default-watch-cache-size=200
          - --delete-collection-workers=10
          - --etcd-servers=http://etcd:2379
          - --log-flush-frequency=10s
          - --runtime-config=autoscaling/v1=false
          - --runtime-config=autoscaling/v2beta1=false
          - --runtime-config=autoscaling/v2beta2=false
          - --runtime-config=batch/v1=false
          - --runtime-config=batch/v1beta1=false
          - --runtime-config=networking.k8s.io/v1=false
          - --runtime-config=networking.k8s.io/v1beta1=false
          - --runtime-config=node.k8s.io/v1beta1=false
        ports:
          - name: http
            containerPort: 8080
