deploy/kube/etcd.yml

---
apiVersion: v1
kind: Service
metadata:
  name: etcd
  labels:
    name: etcd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 2379
    targetPort: 2379
  sessionAffinity: ClientIP
  selector:
    name: etcd
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: etcd
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: etcd
        service: etcd
      annotations:
        prometheus.io/port: "2379"
        prometheus.io/scheme: "http"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: etcd
        image: bitnami/etcd:latest
        ports:
        - name: http
          containerPort: 2379
