deploy/kube/mariadb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: db
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  sessionAffinity: ClientIP
  selector:
    name: db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: db
        service: db
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: mariadb
        image: mariadb:bionic
        command:
          - sh -c "
            echo 'CREATE DATABASE IF NOT EXISTS hub;' > /docker-entrypoint-initdb.d/init.sql;
            echo 'CREATE DATABASE IF NOT EXISTS audit;' >> /docker-entrypoint-initdb.d/init.sql;
            /usr/local/bin/docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
        ports:
        - name: mysql
          containerPort: 3306
