deploy/kube/portal.yml
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    name: portal
spec:
  type: ClusterIP
  ports:
  - name: portal
    port: 3000
    targetPort: 3000
  sessionAffinity: ClientIP
  selector:
    name: portal
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: portal
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: portal
        service: portal
    spec:
      containers:
      - name: portal
        image: quay.io/appvia/kore-ui:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  sessionAffinity: ClientIP
  selector:
    name: redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: redis
        service: redis
    spec:
      containers:
      - name: redis
        image: redis
