deploy/kube/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # the ingress class
    kubernetes.io/ingress.class: nginx
    # You can place tls on the kore-apiserver and upgrade to HTTPS
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    # Force HTTPS on the external ingress
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: api
spec:
  rules:
  - host: CHANGE_ME_TO_API_HOSTNAME
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 10080
        path: /
  tls:
  - hosts:
    - CHANGE_ME_TO_API_HOSTNAME
    secretName: api_tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # the ingress class
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: portal
spec:
  rules:
  - host: CHANGE_ME_TO_UI_HOSTNAME
    http:
      paths:
      - backend:
          serviceName: portal
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - CHANGE_ME_TO_UI_HOSTNAME
    secretName: portal_tls
